--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -190,6 +190,20 @@
        </property>
       </widget>
      </item>
+     <item row="2" column="3">
+      <widget class="QPushButton" name="EspacePushButton">
+       <property name="text">
+        <string>Espace</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="3">
+      <widget class="QPushButton" name="DeletePushButton">
+       <property name="text">
+        <string>Effacer</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
    <widget class="QWidget" name="gridLayoutWidget_2">
@@ -220,7 +234,7 @@
          <string>Oui</string>
         </property>
        </widget>
-       <widget class="QRadioButton" name="CommlexesNoRadioButton">
+       <widget class="QRadioButton" name="ComplexesNoRadioButton">
         <property name="geometry">
          <rect>
           <x>10</x>
@@ -413,7 +427,15 @@
     <addaction name="actionQuitter"/>
     <addaction name="actionA_propos"/>
    </widget>
+   <widget class="QMenu" name="menuEdition">
+    <property name="title">
+     <string>Edition</string>
+    </property>
+    <addaction name="actionAnnuler"/>
+    <addaction name="actionR_tablir"/>
+   </widget>
    <addaction name="menuFichier"/>
+   <addaction name="menuEdition"/>
    <addaction name="menuAffichage"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
@@ -441,6 +463,16 @@
   <action name="actionA_propos">
    <property name="text">
     <string>A propos</string>
+   </property>
+  </action>
+  <action name="actionAnnuler">
+   <property name="text">
+    <string>Annuler</string>
+   </property>
+  </action>
+  <action name="actionR_tablir">
+   <property name="text">
+    <string>Rétablir</string>
    </property>
   </action>
  </widget>
