--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -76,11 +76,17 @@
        <property name="text">
         <string>7</string>
        </property>
+       <property name="shortcut">
+        <string>7</string>
+       </property>
       </widget>
      </item>
      <item row="2" column="0">
       <widget class="QPushButton" name="FourPushButton">
        <property name="text">
+        <string>4</string>
+       </property>
+       <property name="shortcut">
         <string>4</string>
        </property>
       </widget>
@@ -90,11 +96,17 @@
        <property name="text">
         <string>1</string>
        </property>
+       <property name="shortcut">
+        <string>1</string>
+       </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="QPushButton" name="EightPushButton">
        <property name="text">
+        <string>8</string>
+       </property>
+       <property name="shortcut">
         <string>8</string>
        </property>
       </widget>
@@ -104,11 +116,17 @@
        <property name="text">
         <string>5</string>
        </property>
+       <property name="shortcut">
+        <string>5</string>
+       </property>
       </widget>
      </item>
      <item row="3" column="1">
       <widget class="QPushButton" name="TwoPushButton">
        <property name="text">
+        <string>2</string>
+       </property>
+       <property name="shortcut">
         <string>2</string>
        </property>
       </widget>
@@ -118,11 +136,17 @@
        <property name="text">
         <string>0</string>
        </property>
+       <property name="shortcut">
+        <string>0</string>
+       </property>
       </widget>
      </item>
      <item row="1" column="2">
       <widget class="QPushButton" name="NinePushButton">
        <property name="text">
+        <string>9</string>
+       </property>
+       <property name="shortcut">
         <string>9</string>
        </property>
       </widget>
@@ -132,11 +156,17 @@
        <property name="text">
         <string>6</string>
        </property>
+       <property name="shortcut">
+        <string>6</string>
+       </property>
       </widget>
      </item>
      <item row="3" column="2">
       <widget class="QPushButton" name="ThreePushButton">
        <property name="text">
+        <string>3</string>
+       </property>
+       <property name="shortcut">
         <string>3</string>
        </property>
       </widget>
@@ -146,11 +176,17 @@
        <property name="text">
         <string>/</string>
        </property>
+       <property name="shortcut">
+        <string>/</string>
+       </property>
       </widget>
      </item>
      <item row="0" column="2">
       <widget class="QPushButton" name="MultiplyPushButton">
        <property name="text">
+        <string>*</string>
+       </property>
+       <property name="shortcut">
         <string>*</string>
        </property>
       </widget>
@@ -160,6 +196,9 @@
        <property name="text">
         <string>-</string>
        </property>
+       <property name="shortcut">
+        <string>-</string>
+       </property>
       </widget>
      </item>
      <item row="0" column="0">
@@ -167,11 +206,17 @@
        <property name="text">
         <string>+</string>
        </property>
+       <property name="shortcut">
+        <string>+</string>
+       </property>
       </widget>
      </item>
      <item row="4" column="2">
       <widget class="QPushButton" name="ExpressionPushButton">
        <property name="text">
+        <string>'</string>
+       </property>
+       <property name="shortcut">
         <string>'</string>
        </property>
       </widget>
@@ -188,12 +233,18 @@
        <property name="text">
         <string>$</string>
        </property>
+       <property name="shortcut">
+        <string>$</string>
+       </property>
       </widget>
      </item>
      <item row="2" column="3">
       <widget class="QPushButton" name="EspacePushButton">
        <property name="text">
         <string>Espace</string>
+       </property>
+       <property name="shortcut">
+        <string>Space</string>
        </property>
       </widget>
      </item>
