--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>376</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,13 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>800</width>
-    <height>600</height>
+    <height>376</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>800</width>
-    <height>600</height>
+    <height>432</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -37,8 +37,8 @@
      <rect>
       <x>20</x>
       <y>10</y>
-      <width>281</width>
-      <height>51</height>
+      <width>311</width>
+      <height>25</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="inputHorizontalLayout">
@@ -53,9 +53,12 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="EvalPushButton">
+      <widget class="QPushButton" name="ReturnPushButton">
        <property name="text">
-        <string>EVAL</string>
+        <string>RETURN</string>
+       </property>
+       <property name="shortcut">
+        <string>Return</string>
        </property>
       </widget>
      </item>
@@ -64,8 +67,8 @@
    <widget class="QWidget" name="gridLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>70</y>
+      <x>20</x>
+      <y>50</y>
       <width>320</width>
       <height>170</height>
      </rect>
@@ -240,8 +243,14 @@
      </item>
      <item row="2" column="3">
       <widget class="QPushButton" name="EspacePushButton">
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+         <kerning>true</kerning>
+        </font>
+       </property>
        <property name="text">
-        <string>Espace</string>
+        <string>SPACE</string>
        </property>
        <property name="shortcut">
         <string>Space</string>
@@ -251,7 +260,7 @@
      <item row="1" column="3">
       <widget class="QPushButton" name="DeletePushButton">
        <property name="text">
-        <string>Effacer</string>
+        <string>CLEAR</string>
        </property>
       </widget>
      </item>
@@ -260,7 +269,7 @@
    <widget class="QWidget" name="gridLayoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>620</x>
       <y>10</y>
       <width>160</width>
       <height>251</height>
@@ -393,8 +402,8 @@
    <widget class="QSpinBox" name="StackDisplaySizespinBox">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>10</y>
+      <x>470</x>
+      <y>270</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -409,10 +418,10 @@
    <widget class="QTextEdit" name="StackDisplayTextEdit">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>40</y>
+      <x>390</x>
+      <y>10</y>
       <width>121</width>
-      <height>241</height>
+      <height>251</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -437,22 +446,236 @@
      <number>80</number>
     </property>
    </widget>
-   <widget class="QLabel" name="StackLabel">
+   <widget class="QWidget" name="gridLayoutWidget_3">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>20</x>
+      <y>220</y>
+      <width>321</width>
+      <height>111</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="0">
+      <widget class="QPushButton" name="PowPushButton">
+       <property name="text">
+        <string>POW</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QPushButton" name="SinPushButton">
+       <property name="text">
+        <string>SIN</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QPushButton" name="CosPushButton">
+       <property name="text">
+        <string>COS</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="2">
+      <widget class="QPushButton" name="TanPushButton">
+       <property name="text">
+        <string>TAN</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QPushButton" name="LnPushButton">
+       <property name="text">
+        <string>LN</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QPushButton" name="LogPushButton">
+       <property name="text">
+        <string>LOG</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="2">
+      <widget class="QPushButton" name="InvPushButton">
+       <property name="text">
+        <string>INV</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="3">
+      <widget class="QPushButton" name="SinhPushButton">
+       <property name="text">
+        <string>SINH</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="4">
+      <widget class="QPushButton" name="CoshPushButton">
+       <property name="text">
+        <string>COSH</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="5">
+      <widget class="QPushButton" name="TanhPushButton">
+       <property name="text">
+        <string>TANH</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="5">
+      <widget class="QPushButton" name="ModPushButton">
+       <property name="text">
+        <string>MOD</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="4">
+      <widget class="QPushButton" name="SignPushButton">
+       <property name="text">
+        <string>SIGN</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QPushButton" name="SqrPushButton">
+       <property name="text">
+        <string>SQR</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QPushButton" name="CubePushButton">
+       <property name="text">
+        <string>CUBE</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="3">
+      <widget class="QPushButton" name="SqrtPushButton">
+       <property name="text">
+        <string>SQRT</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="3">
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string>!</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="gridLayoutWidget_4">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
       <y>10</y>
-      <width>46</width>
-      <height>21</height>
+      <width>77</width>
+      <height>251</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="PileOpGridLayout">
+     <item row="1" column="0">
+      <widget class="QPushButton" name="SumPushButton">
+       <property name="text">
+        <string>SUM</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QPushButton" name="MeanPushButton">
+       <property name="text">
+        <string>MEAN</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0">
+      <widget class="QPushButton" name="ClearPushButton">
+       <property name="text">
+        <string>CLEAR</string>
+       </property>
+       <property name="shortcut">
+        <string>Ctrl+C</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="0">
+      <widget class="QPushButton" name="DupPushButton">
+       <property name="text">
+        <string>DUP</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="0">
+      <widget class="QPushButton" name="DropPushButton">
+       <property name="text">
+        <string>DROP</string>
+       </property>
+      </widget>
+     </item>
+     <item row="10" column="0">
+      <widget class="QPushButton" name="EvalPushButton">
+       <property name="text">
+        <string>EVAL</string>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="0">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="3" column="0">
+      <widget class="QPushButton" name="SwapPushButton">
+       <property name="text">
+        <string>SWAP</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <spacer name="verticalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>270</y>
+      <width>71</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>13</pointsize>
+      <pointsize>10</pointsize>
      </font>
     </property>
     <property name="text">
-     <string>Pile</string>
+     <string>Affichage:</string>
     </property>
    </widget>
   </widget>
@@ -489,14 +712,6 @@
    <addaction name="menuEdition"/>
    <addaction name="menuAffichage"/>
   </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-  </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionClavier">
    <property name="checkable">
@@ -529,5 +744,42 @@
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>actionQuitter</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>299</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>MainWindow</sender>
+   <signal>keyPressed(QKeyEvent*)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>keyPressEvent(QKeyEvent*)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>399</x>
+     <y>187</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>187</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <signal>keyPressed(QKeyEvent*)</signal>
+  <slot>keyPressEvent(QKeyEvent*)</slot>
+ </slots>
 </ui>
